EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/12/2011==
gaeorn: possible fix for some short duration buffs (bard songs) fading one tick early
Caryatis: Changed SE_NoCombatSkills to SE_CombatSkills(0 = spells only, 1 = discs only)
Caryatis: Implemented SE_SpellDurationIncByTic(formerly SE_FocusCombatDurationMod), it adds tics to spells/discs
Caryatis: Added support for Special Attack 'Y'(Ranged Attack), so when an NPC can't reach or summon his target, he will use range if able to
Caryatis: Implemented SE_Forceful_Rejuv(refreshes spell gems), SE_HealFromMana, SE_ManaDrainWithDmg, SE_EndDrainWithDmg
Caryatis: Implemented SE_LimitHPPercent, SE_LimitManaPercent, SE_LimitEndPercent(limit you to a certain % while you have the buff)
Caryatis: Implemented SE_SwarmPetDuration(swarm pet focus)
Caryatis: Res Timer changes have been reverted temporarily.

Optional SQL:
utils/sql/svn/1817_optional_npc_archery_bonus_rule.sql

==01/11/2011==
gaeorn: fixed lull max level check to account for no max level
Caryatis: Change to Doppelganger NPCID due to PEQ's next rev already using the IDs.
Trevius: Added quest::stopalltimers() to allow stopping all current timers on an NPC at one time.
Trevius: Added option to stop all timers when using #reloadquest by adding any argument after the command (ie. "#reloadquest 1"). Also added new #rq alias for the command.

Required SQL:
utils/sql/svn/1813_required_doppelganger_npcid_change.sql

==01/09/2011==
Caryatis: Viral spells are now supported(field191 determines how many targets it will spread to and field 192 determines how often(in seconds)).
Caryatis: Lull spells will now only work on the levels they were intended to.
Caryatis: Corpses now have a res timer(like live). You may res a corpse as many times as you want however you will only recieve exp for the first.

Optional SQL:
utils/sql/svn/1809_optional_rules.sql

==01/08/2011==