@@ -219,6 +219,7 @@ public:
 	uint8 FactionValue();
 	void wearchange(int8 slot, int16 texture);
 	void voicetell(char *str, int macronum, int racenum, int gendernum);
+    void LearnRecipe(uint32 recipe_id);
 
 	//not in here because it retains perl types
 	//thing ChooseRandom(array_of_things)
